data/derived/sp14/progs/unify/prog1550.ml.out
Characters 116-159:
  | Sine x           ->  Printf.printf "sin(pi*%s)" (exprToString x)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         string
